--- a/views/pages/viewpaste.ejs
+++ b/views/pages/viewpaste.ejs
@@ -1,4 +1,3 @@
-<!-- viewpaste.ejs -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -18,17 +17,17 @@
     </script>
     <div class="bin-buttons" id="bin-buttons">
         <p><b>Paste title:</b> <%= paste.title %></p>
-        <p><b>Paste made by:</b> <a href="/profile?uid=<%= paste.user_id %>"><%= paste.user_name %></a></p>
+        <p><b>Paste made by:</b> <a href="/profile?uid=<%= paste.user_id || 0 %>"><%= paste.user_name %></a></p>
         <p><b>Private:</b> <%= paste.private ? "Yes" : "No" %></p>
         <p><b>Unlisted:</b> <%= paste.unlisted ? "Yes" : "No" %></p>
-        <p><b>Hits:</b> <%= paste.hits %></p>
+        <p><b>Hits:</b> <%= paste.views %></p>
         <p><b>Paste created:</b> <%= paste.created_at %></p>
-        <a target="_blank" href="post.php" class="btn">New Paste</a><br><br>
+        <a target="_blank" href="/newpaste" class="btn">New Paste</a><br><br>
         <a target="_blank" href="paste/viewraw?id=<%= paste.id %>" class="btn">View Raw</a><br><br>
                 
         <form action="/paste/comment" method="post">
             <input type="hidden" name="paste_id" value="<%= paste.id %>">
-            <input type="hidden" name="user_id" value="<%= paste.user_id %>"> <!-- Assuming user_id is available in the template context -->
+            <input type="hidden" name="user_id" value="<%= user_id %>"> <!-- Use user_id from backend -->
             <textarea name="comment" class="comment-text" placeholder="Enter comment"></textarea>
             <div class="h-captcha" data-sitekey="ca809027-c3cb-42b6-9dd8-31d626eaa472"></div>
             <input type="submit" name="submit" value="Post Comment">
@@ -37,7 +36,7 @@
                     <% comments.forEach(comment => { %>
                         <div class="b-comments b-comment" style="padding-left: 10px; position: relative;" id="<%= comment.id %>">
                             <b>
-                                <a style="color: #2a9fd6;" href="/profile?uid=<%= comment.user_id %>"><%= comment.username %></a>
+                                <a style="color: #2a9fd6;" href="/profile?uid=<%= comment.user_id || 0 %>"><%= comment.username %></a>
                             </b> - 
                             <p title="<%= new Date(comment.created_at).toLocaleString() %>" style="display: inline;">
                                 <%= comment.created_at %>
