--- a/views/pages/newpaste.ejs
+++ b/views/pages/newpaste.ejs
@@ -3,7 +3,7 @@
 
 <head>
     <%- include('../partials/header') %>
-        <script src="https://js.hcaptcha.com/1/api.js" async defer></script>
+    <script src="https://js.hcaptcha.com/1/api.js" async defer></script>
 </head>
 
 <body class="past">
@@ -23,43 +23,19 @@
             placeholder="READ THE TERMS OF SERVICE BEFORE CREATING A PASTE!"></textarea>
     </form>
 
-    <div id="captchaContainer"
-        style="background-color: rgb(255, 255, 255); border: 1px solid rgb(215, 215, 215); box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 4px; border-radius: 4px; left: auto; top: -10000px; z-index: -2147483648; position: absolute; pointer-events: auto; transition: opacity 0.15s ease-out 0s; opacity: 0; visibility: hidden;"
-        aria-hidden="true">
-        <div style="position: relative; z-index: 1;">
-            <iframe
-                src="https://newassets.hcaptcha.com/captcha/v1/997e24b/static/hcaptcha.html#frame=challenge&amp;id=0auwi7lbr4sn&amp;host=skidbin.cc&amp;sentry=true&amp;reportapi=https%3A%2F%2Faccounts.hcaptcha.com&amp;recaptchacompat=true&amp;custom=false&amp;hl=en&amp;tplinks=on&amp;pstissuer=https%3A%2F%2Fpst-issuer.hcaptcha.com&amp;sitekey=ca809027-c3cb-42b6-9dd8-31d626eaa472&amp;theme=light&amp;origin=https%3A%2F%2Fskidbin.cc"
-                frameborder="0" scrolling="no"
-                allow="private-state-token-issuance 'src'; private-state-token-redemption 'src'"
-                title="Main content of the hCaptcha challenge"
-                style="border: 0px; z-index: 2000000000; position: relative;"></iframe>
-        </div>
-        <div
-            style="width: 100%; height: 100%; position: fixed; pointer-events: none; top: 0px; left: 0px; z-index: 0; background-color: rgb(255, 255, 255); opacity: 0.05;">
-        </div>
-        <div
-            style="border-width: 11px; position: absolute; pointer-events: none; margin-top: -11px; z-index: 1; right: 100%;">
-            <div
-                style="border-width: 10px; border-style: solid; border-color: transparent rgb(255, 255, 255) transparent transparent; position: relative; top: 10px; z-index: 1;">
-            </div>
-            <div
-                style="border-width: 11px; border-style: solid; border-color: transparent rgb(215, 215, 215) transparent transparent; position: relative; top: -11px; z-index: 0;">
-            </div>
-        </div>
-    </div>
-
     <script>
-        document.getElementById('pasteForm').addEventListener('submit', function (event) {
-            var response = hcaptcha.getResponse();
-            if (!response) {
-                alert("Please complete the hCaptcha challenge.");
-                event.preventDefault();
-            }
-        });
-
         document.addEventListener("DOMContentLoaded", function () {
-            const colorPicker = document.getElementById("text_color");
+            const form = document.getElementById("pasteForm");
 
+            form.addEventListener("submit", function (event) {
+                var captchaResponse = document.querySelector('textarea[name="h-captcha-response"]').value;
+                if (!captchaResponse) {
+                    alert("Please complete the hCaptcha challenge.");
+                    event.preventDefault();
+                }
+            });
+
+            const colorPicker = document.getElementById("text_color");
             colorPicker.addEventListener("input", function () {
                 const hex = colorPicker.value;
 
