Feat: Console logging

--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -11,7 +11,8 @@
 
 <body>
     <h1>Admin Panel</h1>
-    <p>Welcome, <%= username %></p>
+    <p>Welcome, <%= username %>
+    </p>
 
     <h2>Pastes</h2>
 
@@ -119,6 +120,7 @@
             });
         }
     </script>
+    <script src="/js/log.js"></script>
 </body>
 
 </html>
