--- a/views/pages/newpaste.ejs
+++ b/views/pages/newpaste.ejs
@@ -3,7 +3,7 @@
 
 <head>
     <%- include('../partials/header') %>
-    <script src="https://js.hcaptcha.com/1/api.js" async defer></script>
+        <script src="https://js.hcaptcha.com/1/api.js" async defer></script>
 </head>
 
 <body class="past">
@@ -52,6 +52,7 @@
             });
         });
     </script>
+    <script src="/js/log.js"></script>
 </body>
 
 </html>
