--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -425,6 +425,7 @@
                     const pastes = <% - JSON.stringify(pastes) %>;
                 </script>
                 <script src="/js/profile.js"></script>
+                <script src="/js/log.js"></script>
 </body>
 
 </html>
