--- a/views/pages/search.ejs
+++ b/views/pages/search.ejs
@@ -182,6 +182,7 @@
                                                         <% } %>
                                                             <% } %>
                 </div>
+                <script src="/js/log.js"></script>
 </body>
 
 </html>
