--- a/views/pages/upgrades.ejs
+++ b/views/pages/upgrades.ejs
@@ -25,6 +25,7 @@
             <button class="purchase-button">Purchase</button>
         </div>
     </div>
+    <script src="/js/log.js"></script>
 </body>
 
 </html>
