--- a/views/pages/users.ejs
+++ b/views/pages/users.ejs
@@ -143,8 +143,7 @@
                                 <% }) %>
                         </tbody>
                     </table>
-
-
+                    <script src="/js/log.js"></script>
 </body>
 
 </html>
