--- a/views/pages/viewpaste.ejs
+++ b/views/pages/viewpaste.ejs
@@ -55,5 +55,6 @@
     <div class="">
         <pre class="view-paste"><%= paste.content %></pre>
     </div>
-
+    <script src="/js/log.js"></script>
+</body>
 </html>
