--- a/views/pages/homepage.ejs
+++ b/views/pages/homepage.ejs
@@ -214,7 +214,7 @@
                             <% } %>
                     </div>
                     </div>
-
+                    <script src="/js/log.js"></script>
 </body>
 
 </html>
